--- a/.github/workflows/flutter_test_pipeline.yml
+++ b/.github/workflows/flutter_test_pipeline.yml
@@ -19,14 +19,15 @@ jobs:
     steps:
       # 2. SETUP ENVIRONMENT: Checkout code
       - name: Checkout repository
-        uses: actions/checkout@v4 # Uses the official checkout action
+        uses: actions/checkout@v4
 
       # 2. SETUP ENVIRONMENT: Setup Flutter
       - name: Setup Flutter
-        uses: subosito/flutter-action@v2 # A popular action for Flutter setup
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.x.x' # Specify your Flutter version (e.g., '3.22.0' or use a channel like 'stable')
-          channel: 'stable' # Optional: specify channel
+          flutter-version: '3.22.2' # <-- UPDATED based on pubspec.yaml (Dart SDK >=3.4.3)
+          # channel: 'stable' # Can be kept if 3.22.2 is on stable, or removed.
+                           # The specific version is usually sufficient.
           cache: true # Enable caching of Flutter SDK and pub dependencies
 
       # (Optional) 2. SETUP ENVIRONMENT: Setup Java (if needed by any test dependencies or future build steps)
