--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,3 +56,15 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    // Your existing dependencies would be here
+    // implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    // implementation 'androidx.core:core-ktx:1.9.0'
+    // implementation 'androidx.appcompat:appcompat:1.6.1'
+    // implementation 'com.google.android.material:material:1.10.0'
+    // implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    // testImplementation 'junit:junit:4.13.2'
+    //androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    //androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+}
