--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,11 @@ dependencies:
   flutter_pcm_sound: ^3.1.1 #
   web_socket_channel: ^3.0.1 #
 
-  # Added FFI and path packages
-  ffi: ^2.1.0 # Or the latest version
+  # ObjectBox dependencies
+  objectbox: ^4.0.0 # Check pub.dev for the latest version
+  objectbox_flutter_libs: any # Or specify a version, 'any' takes the matching native libs
+
+  # Path packages (still useful)
   path_provider: ^2.1.3 # Or the latest version
   path: ^1.9.0 # Or the latest version
 
@@ -28,6 +31,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter #
   flutter_lints: ^3.0.0 #
+
+  # ObjectBox generator dependencies
+  build_runner: ^2.4.0 # Check pub.dev for the latest version
+  objectbox_generator: ^4.0.0 # Check pub.dev for the latest version
 
 flutter:
   uses-material-design: true #
