--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,47 +1,52 @@
 name: frame_realtime_gemini_voicevision
 description: "Connects to Frame, streams audio from the Frame microphone and photos from its camera in a websockets conversation with the Gemini Realtime API"
-publish_to: 'none' #
-version: 0.1.0 #
+publish_to: 'none'
+version: 0.1.0
 
 environment:
-  sdk: '>=3.4.3 <4.0.0' #
+  sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
   flutter:
-    sdk: flutter #
-  flutter_blue_plus: ^1.32.12 #
-  logging: ^1.2.0 #
-  simple_frame_app: ^7.0.0 #
-  frame_msg: ^2.0.0 #
-  shared_preferences: ^2.3.2 #
-  share_plus: ^10.1.0 #
-  flutter_foreground_task: ^6.5.0 #
-  flutter_pcm_sound: ^3.1.1 #
-  web_socket_channel: ^3.0.1 #
+    sdk: flutter
+  flutter_blue_plus: ^1.32.12
+  logging: ^1.2.0
+  simple_frame_app: ^7.0.0
+  frame_msg: ^2.0.0
+  shared_preferences: ^2.3.2
+  share_plus: ^10.1.0
+  flutter_foreground_task: ^6.5.0
+  flutter_pcm_sound: ^3.1.1
+  web_socket_channel: ^3.0.1
 
   # ObjectBox dependencies
-  objectbox: ^4.0.0 # Check pub.dev for the latest version
-  objectbox_flutter_libs: any # Or specify a version, 'any' takes the matching native libs
+  objectbox: ^4.0.0
+  objectbox_flutter_libs: any
 
-  # Path packages (still useful)
-  path_provider: ^2.1.3 # Or the latest version
-  path: ^1.9.0 # Or the latest version
+  # Path packages
+  path_provider: ^2.1.3
+  path: ^1.9.0
+
+  # NEW: Added for Phase 1
+  google_mlkit_text_recognition: ^0.11.0
+  image: ^4.2.0
+
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter #
-  flutter_lints: ^3.0.0 #
+    sdk: flutter
+  flutter_lints: ^3.0.0
 
   # ObjectBox generator dependencies
-  build_runner: ^2.4.0 # Check pub.dev for the latest version
-  objectbox_generator: ^4.0.0 # Check pub.dev for the latest version
+  build_runner: ^2.4.0
+  objectbox_generator: ^4.0.0
 
 flutter:
-  uses-material-design: true #
-  assets: #
-    - packages/frame_msg/lua/battery.min.lua #
-    - packages/frame_msg/lua/data.min.lua #
-    - packages/frame_msg/lua/camera.min.lua #
-    - packages/frame_msg/lua/code.min.lua #
-    - packages/frame_msg/lua/plain_text.min.lua #
-    - assets/frame_app.min.lua #
+  uses-material-design: true
+  assets:
+    - packages/frame_msg/lua/battery.min.lua
+    - packages/frame_msg/lua/data.min.lua
+    - packages/frame_msg/lua/camera.min.lua
+    - packages/frame_msg/lua/code.min.lua
+    - packages/frame_msg/lua/plain_text.min.lua
+    - assets/frame_app.min.lua
