--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,47 +1,76 @@
 name: frame_realtime_gemini_voicevision
-description: "Connects to Frame, streams audio from the Frame microphone and photos from its camera in a websockets conversation with the Gemini Realtime API"
-publish_to: 'none' #
-version: 0.1.0 #
+description: >
+  Connects to Brilliant Frame, streams mic & camera data via WebSockets
+  to the Gemini Realtime API, runs on-device OCR & TFLite models,
+  stores data in ObjectBox, and shares results.
+
+publish_to: none
+version: 0.1.0
 
 environment:
-  sdk: '>=3.4.3 <4.0.0' #
+  sdk: ">=3.3.0 <4.0.0"
+  flutter: ">=3.22.0"
 
+############################
+# Runtime dependencies
+############################
 dependencies:
   flutter:
-    sdk: flutter #
-  flutter_blue_plus: ^1.32.12 #
-  logging: ^1.2.0 #
-  simple_frame_app: ^7.0.0 #
-  frame_msg: ^2.0.0 #
-  shared_preferences: ^2.3.2 #
-  share_plus: ^10.1.0 #
-  flutter_foreground_task: ^6.5.0 #
-  flutter_pcm_sound: ^3.1.1 #
-  web_socket_channel: ^3.0.1 #
+    sdk: flutter
 
-  # ObjectBox dependencies
-  objectbox: ^4.0.0 # Check pub.dev for the latest version
-  objectbox_flutter_libs: any # Or specify a version, 'any' takes the matching native libs
+  # Brilliant-Frame ecosystem
+  simple_frame_app:           ^7.1.0
+  frame_msg:                  ^2.0.0
 
-  # Path packages (still useful)
-  path_provider: ^2.1.3 # Or the latest version
-  path: ^1.9.0 # Or the latest version
+  # Bluetooth LE
+  flutter_blue_plus:          ^1.35.3
 
+  # On-device ML
+  tflite_flutter:             ^0.10.4      # interpreter (matches Processing)
+  tflite_flutter_processing:  ^0.4.1       # ImageProcessor / AudioClassifier
+  google_mlkit_text_recognition: ^0.11.0
+  image:                      ^4.5.2
+
+  # Storage & data
+  objectbox:              ^4.3.0
+  objectbox_flutter_libs: any
+
+  # Platform utilities
+  shared_preferences:      ^2.3.2
+  share_plus:              ^10.1.0
+  flutter_foreground_task: ^6.5.0
+  flutter_pcm_sound:       ^3.1.1
+  web_socket_channel:      ^3.0.1
+  path_provider:           ^2.1.5
+  path:                    ^1.9.1
+  logging:                 ^1.3.0
+  uuid:                    ^4.5.1
+  rxdart:                  ^0.28.0
+
+############################
+# Dev-only dependencies
+############################
 dev_dependencies:
   flutter_test:
-    sdk: flutter #
-  flutter_lints: ^3.0.0 #
+    sdk: flutter
+  flutter_lints:  ^3.0.2
+  build_runner:   ^2.4.15
+  objectbox_generator: ^4.3.0
 
-  # ObjectBox generator dependencies
-  build_runner: ^2.4.0 # Check pub.dev for the latest version
-  objectbox_generator: ^4.0.0 # Check pub.dev for the latest version
-
+############################
+# Flutter assets
+############################
 flutter:
-  uses-material-design: true #
-  assets: #
-    - packages/frame_msg/lua/battery.min.lua #
-    - packages/frame_msg/lua/data.min.lua #
-    - packages/frame_msg/lua/camera.min.lua #
-    - packages/frame_msg/lua/code.min.lua #
-    - packages/frame_msg/lua/plain_text.min.lua #
-    - assets/frame_app.min.lua #
+  uses-material-design: true
+  assets:
+    # Lua assets from frame_msg
+    - packages/frame_msg/lua/battery.min.lua
+    - packages/frame_msg/lua/data.min.lua
+    - packages/frame_msg/lua/camera.min.lua
+    - packages/frame_msg/lua/code.min.lua
+    - packages/frame_msg/lua/plain_text.min.lua
+    # Frame bootstrap script
+    - assets/frame_app.min.lua
+    # TFLite model & vocabulary
+    - assets/models/mobilebert_embedding.tflite
+    - assets/models/vocab.txt
