--- a/.github/workflows/build-demo-apk.yml
+++ b/.github/workflows/build-demo-apk.yml
@@ -24,10 +24,12 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      # CORRECTED: This step now specifies a newer version of Flutter
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.2' # Using a modern, specific version
+          # This version of Flutter contains a new enough Dart SDK to resolve the error.
+          flutter-version: '3.22.2'
           channel: 'stable'
           cache: true
 
