--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,7 @@ dependencies:
   image:                      ^4.5.2
 
   # Storage & data
-  # Downgraded ObjectBox to be compatible with the build environment's Dart SDK
-  objectbox:              ^4.3.0
+  objectbox:                  ^4.3.0
   objectbox_flutter_libs: any
 
   # Platform utilities
@@ -55,9 +54,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints:  ^3.0.2
-  build_runner:   ^2.4.15
-  # Downgraded ObjectBox generator to be compatible with the build environment's Dart SDK
-  objectbox_generator: ^4.2.0
+  # CORRECTED: Pinned to the latest version compatible with Dart 3.5.0
+  build_runner:   ^2.4.13
+  objectbox_generator: ^4.3.0
 
 ############################
 # Flutter assets
