--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   flutter_pcm_sound:       ^3.1.1
   web_socket_channel:      ^3.0.1
   path_provider:           ^2.1.5
-  path:                    ^1.9.1
+  # CORRECTED: Aligned with Flutter SDK's pinned version
+  path:                    ^1.9.0
   logging:                 ^1.3.0
   uuid:                    ^4.5.1
   rxdart:                  ^0.28.0
@@ -54,7 +55,6 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints:  ^3.0.2
-  # CORRECTED: Pinned to the latest version compatible with Dart 3.5.0
   build_runner:   ^2.4.13
   objectbox_generator: ^4.3.0
 
