--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,39 +1,43 @@
 name: frame_realtime_gemini_voicevision
 description: >
   Connects to Brilliant Frame, streams mic & camera data via WebSockets
-  to the Gemini Realtime API, runs on-device OCR & TFLite models,
-  stores data in ObjectBox, and shares results.
-
-publish_to: none
+  to the Gemini Realtime API, runs on-device OCR and TFLite models,
+  stores data in ObjectBox and shares results.
+publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"   # Dart 3.5 matches ObjectBox ≥4.2
   flutter: ">=3.22.0"
 
-############################
+################################
 # Runtime dependencies
-############################
+################################
 dependencies:
   flutter:
     sdk: flutter
 
-  # Brilliant-Frame ecosystem
-  simple_frame_app:           ^7.1.0
-  frame_msg:                  ^2.0.0
+  # Brilliant-Frame stack
+  simple_frame_app: ^7.1.0
+  frame_msg:        ^2.0.0
 
   # Bluetooth LE
-  flutter_blue_plus:          ^1.35.3
+  flutter_blue_plus: ^1.35.3
+  flutter_blue_plus_android: ^3.0.0
+  flutter_blue_plus_darwin:  ^3.0.0
+  flutter_blue_plus_linux:   ^3.0.0
+  flutter_blue_plus_web:     ^3.0.0
+  flutter_blue_plus_platform_interface: ^3.0.0
 
-  # On-device ML
-  tflite_flutter:             ^0.10.4
-  tflite_flutter_processing:  ^0.4.1
+  # On-device ML  → keep interpreter & helper **aligned**
+  tflite_flutter:            ^0.10.4          # helper requires ≤0.10.x
+  tflite_flutter_processing: ^0.4.1           # official helper replacement
   google_mlkit_text_recognition: ^0.11.0
-  image:                      ^4.5.2
+  image: ^4.5.2
 
-  # Storage & data
-  objectbox:                  ^4.3.0
-  objectbox_flutter_libs: any
+  # Local database
+  objectbox:              ^4.2.0              # ✓ Dart 3.5, path 1.9.0
+  objectbox_flutter_libs: ^4.2.0
 
   # Platform utilities
   shared_preferences:      ^2.3.2
@@ -41,37 +45,42 @@ dependencies:
   flutter_foreground_task: ^6.5.0
   flutter_pcm_sound:       ^3.1.1
   web_socket_channel:      ^3.0.1
-  path_provider:           ^2.1.5
-  # CORRECTED: Aligned with Flutter SDK's pinned version
-  path:                    ^1.9.0
-  logging:                 ^1.3.0
+  path_provider:           ^2.1.4              # last version that still pulls path 1.9.0
+  path:                    1.9.0               # **pin** to avoid test-tool conflict
   uuid:                    ^4.5.1
   rxdart:                  ^0.28.0
+  logging:                 ^1.3.0
 
-############################
+################################
 # Dev-only dependencies
-############################
+################################
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints:  ^3.0.2
-  build_runner:   ^2.4.13
-  objectbox_generator: ^4.3.0
+  flutter_lints:   ^3.0.2
+  build_runner:    2.4.14               # 3.6-ready but still Dart 3.5-compatible
+  objectbox_generator: 4.2.0            # matches ObjectBox 4.2, uses path 1.9.0
 
-############################
+################################
+# Dependency overrides
+################################
+# Forces every package to use exactly path 1.9.0, which
+# keeps flutter_test and objectbox_generator happy.
+dependency_overrides:
+  path: 1.9.0
+
+################################
 # Flutter assets
-############################
+################################
 flutter:
   uses-material-design: true
   assets:
-    # Lua assets from frame_msg
     - packages/frame_msg/lua/battery.min.lua
     - packages/frame_msg/lua/data.min.lua
     - packages/frame_msg/lua/camera.min.lua
     - packages/frame_msg/lua/code.min.lua
     - packages/frame_msg/lua/plain_text.min.lua
-    # Frame bootstrap script
     - assets/frame_app.min.lua
-    # TFLite model & vocabulary
+    # MobileBERT sentence-embedding model
     - assets/models/mobilebert_embedding.tflite
     - assets/models/vocab.txt
