--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: frame_realtime_gemini_voicevision
 description: >
   Connects to Brilliant Frame, streams mic & camera data via WebSockets
-  to the Gemini Realtime API, runs on-device OCR and TFLite models,
-  stores data in ObjectBox and shares results.
+  to the Gemini Realtime API, runs on-device OCR & TFLite models,
+  stores data in ObjectBox, and shares results.
 publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ">=3.5.0 <4.0.0"   # Dart 3.5 matches ObjectBox ≥4.2
+  sdk: ">=3.5.0 <4.0.0"
   flutter: ">=3.22.0"
 
-################################
+#################################
 # Runtime dependencies
 ################################
 dependencies:
@@ -51,25 +51,26 @@ dependencies:
   rxdart:                  ^0.28.0
   logging:                 ^1.3.0
 
-################################
+#################################
 # Dev-only dependencies
 ################################
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints:   ^3.0.2
-  build_runner:    2.4.14               # 3.6-ready but still Dart 3.5-compatible
+  # CORRECTED: Pinned to the latest version compatible with Dart 3.5.0
+  build_runner:    ^2.4.13
   objectbox_generator: 4.2.0            # matches ObjectBox 4.2, uses path 1.9.0
 
-################################
+#################################
 # Dependency overrides
-################################
+#################################
 # Forces every package to use exactly path 1.9.0, which
 # keeps flutter_test and objectbox_generator happy.
 dependency_overrides:
   path: 1.9.0
 
-################################
+#################################
 # Flutter assets
 ################################
 flutter:
