--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,40 +3,41 @@ description: >
   Connects to Brilliant Frame, streams mic & camera data via WebSockets
   to the Gemini Realtime API, runs on-device OCR & TFLite models,
   stores data in ObjectBox, and shares results.
-publish_to: 'none'
+
+publish_to: none
 version: 0.1.0
 
 environment:
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.5.0 <4.0.0"       # Dart 3.5 satisfies ObjectBox 4.2
   flutter: ">=3.22.0"
 
-#################################
+###############################################################################
 # Runtime dependencies
-################################
+###############################################################################
 dependencies:
   flutter:
     sdk: flutter
 
   # Brilliant-Frame stack
-  simple_frame_app: ^7.1.0
-  frame_msg:        ^2.0.0
+  simple_frame_app:           ^7.1.0
+  frame_msg:                  ^2.0.0
 
   # Bluetooth LE
-  flutter_blue_plus: ^1.35.3
-  flutter_blue_plus_android: ^3.0.0
-  flutter_blue_plus_darwin:  ^3.0.0
-  flutter_blue_plus_linux:   ^3.0.0
-  flutter_blue_plus_web:     ^3.0.0
+  flutter_blue_plus:          ^1.35.3
+  flutter_blue_plus_android:  ^3.0.0
+  flutter_blue_plus_darwin:   ^3.0.0
+  flutter_blue_plus_linux:    ^3.0.0
+  flutter_blue_plus_web:      ^3.0.0
   flutter_blue_plus_platform_interface: ^3.0.0
 
-  # On-device ML  → keep interpreter & helper **aligned**
-  tflite_flutter:            ^0.10.4          # helper requires ≤0.10.x
-  tflite_flutter_processing: ^0.4.1           # official helper replacement
+  # On-device ML
+  tflite_flutter:             ^0.10.4          # interpreter
+  tflite_flutter_processing:  ^0.4.1           # helper (requires 0.10.x)
   google_mlkit_text_recognition: ^0.11.0
-  image: ^4.5.2
+  image:                      ^4.5.2
 
   # Local database
-  objectbox:              ^4.2.0              # ✓ Dart 3.5, path 1.9.0
+  objectbox:              ^4.2.0               # 4.3.0 needs path 1.9.1
   objectbox_flutter_libs: ^4.2.0
 
   # Platform utilities
@@ -45,43 +46,45 @@ dependencies:
   flutter_foreground_task: ^6.5.0
   flutter_pcm_sound:       ^3.1.1
   web_socket_channel:      ^3.0.1
-  path_provider:           ^2.1.4              # last version that still pulls path 1.9.0
-  path:                    1.9.0               # **pin** to avoid test-tool conflict
+  path_provider:           ^2.1.4              # works with path 1.9.0
+  path:                    1.9.0               # pin—flutter_test requires this
   uuid:                    ^4.5.1
   rxdart:                  ^0.28.0
   logging:                 ^1.3.0
 
-#################################
+###############################################################################
 # Dev-only dependencies
-################################
+###############################################################################
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints:   ^3.0.2
-  # CORRECTED: Pinned to the latest version compatible with Dart 3.5.0
-  build_runner:    ^2.4.13
-  objectbox_generator: 4.2.0            # matches ObjectBox 4.2, uses path 1.9.0
+  flutter_lints:  ^3.0.2
+  build_runner:   ^2.4.13      # last tag that supports Dart 3.5
+  objectbox_generator: ^4.2.0  # matches ObjectBox 4.2 / path 1.9.0
 
-#################################
-# Dependency overrides
-#################################
-# Forces every package to use exactly path 1.9.0, which
-# keeps flutter_test and objectbox_generator happy.
+###############################################################################
+# Overrides needed to build with Dart 3.5 + path 1.9.0
+###############################################################################
 dependency_overrides:
-  path: 1.9.0
+  path: 1.9.0       # keeps flutter_test & objectbox_generator compatible
+  typed_data: ^1.4.0  # provides UnmodifiableUint8ListView for tflite_flutter
 
-#################################
+###############################################################################
 # Flutter assets
-################################
+###############################################################################
 flutter:
   uses-material-design: true
   assets:
+    # Lua helpers bundled in frame_msg
     - packages/frame_msg/lua/battery.min.lua
     - packages/frame_msg/lua/data.min.lua
     - packages/frame_msg/lua/camera.min.lua
     - packages/frame_msg/lua/code.min.lua
     - packages/frame_msg/lua/plain_text.min.lua
+
+    # Frame-side bootstrap
     - assets/frame_app.min.lua
-    # MobileBERT sentence-embedding model
+
+    # TFLite model & vocabulary
     - assets/models/mobilebert_embedding.tflite
     - assets/models/vocab.txt
