--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,90 +1,91 @@
 name: frame_realtime_gemini_voicevision
 description: >
-  Connects to Brilliant Frame, streams mic & camera data via WebSockets
-  to the Gemini Realtime API, runs on-device OCR & TFLite models,
-  stores data in ObjectBox, and shares results.
+  Connects to Brilliant Frame, streams microphone & camera data via
+  WebSockets to the Gemini Realtime API, runs on-device OCR / TFLite
+  models, stores data in ObjectBox, and shares results.
 
-publish_to: none
+publish_to: "none"
 version: 0.1.0
 
+###############################################################################
+# SDKs – keep Dart ≥3.5 (needed by ObjectBox 4.3.x) and align with Flutter 3.24
+###############################################################################
 environment:
-  sdk: ">=3.5.0 <4.0.0"    # Dart 3.5 is enough
-  flutter: ">=3.22.0"
+  sdk: ">=3.5.0 <4.0.0"
+  flutter: ">=3.24.0"
 
 ###############################################################################
-# Runtime dependencies
+# RUNTIME DEPENDENCIES
 ###############################################################################
 dependencies:
   flutter:
     sdk: flutter
 
-  ## Brilliant-Frame SDK
-  simple_frame_app:           ^7.1.0
-  frame_msg:                  ^2.0.0
+  # Brilliant-Frame stack
+  simple_frame_app: ^7.1.0
+  frame_msg:        ^2.0.0
 
-  ## Bluetooth LE
-  flutter_blue_plus:          ^1.35.3
-  flutter_blue_plus_android:  ^3.0.0
-  flutter_blue_plus_darwin:   ^3.0.0
-  flutter_blue_plus_linux:    ^3.0.0
-  flutter_blue_plus_web:      ^3.0.0
-  flutter_blue_plus_platform_interface: ^3.0.0
+  # Bluetooth LE
+  flutter_blue_plus: ^1.35.3
 
-  ## On-device ML
-  tflite_flutter:             ^0.10.4            # required by processing 0.4.x
-  tflite_flutter_processing:  ^0.4.1
+  # On-device ML
+  tflite_flutter:            ^0.10.4        # ⇦ 0.10.x matches helper pkg
+  tflite_flutter_processing: ^0.4.1
   google_mlkit_text_recognition: ^0.11.0
-  image:                      ^4.5.2
 
-  ## Local database
-  objectbox:              ^4.2.0
-  objectbox_flutter_libs: ^4.2.0
+  # Storage & data
+  objectbox:              ^4.3.0
+  objectbox_flutter_libs: any
 
-  ## Platform util
+  # Platform utilities
   shared_preferences:      ^2.3.2
   share_plus:              ^10.1.0
   flutter_foreground_task: ^6.5.0
   flutter_pcm_sound:       ^3.1.1
   web_socket_channel:      ^3.0.1
-  path_provider:           ^2.1.4
-  path:                    1.9.0        # pinned for flutter_test / OBX
-  uuid:                    ^4.5.1
-  rxdart:                  ^0.28.0
-  logging:                 ^1.3.0
+  path_provider:           ^2.2.10          # latest available on pub.dev
+  path:                    ^1.9.0           # matches flutter_test pin
+
+  # Pure Dart helpers
+  logging: ^1.3.0
+  image:   ^4.5.2
+  uuid:    ^4.5.1
+  rxdart:  ^0.28.0
 
 ###############################################################################
-# Dev-only dependencies
+# DEV-ONLY DEPENDENCIES
 ###############################################################################
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints:  ^3.0.2
-  build_runner:   ^2.4.13      # Dart 3.5 cap
-  objectbox_generator: ^4.2.0
+  build_runner:   ^2.4.13        # 2.4.15+ needs Dart 3.6 – stay on 2.4.13
+  objectbox_generator: ^4.3.0
 
 ###############################################################################
-# Overrides
-###############################################################################
-dependency_overrides:
-  # Needed by tflite_flutter 0.10.x (contains UnmodifiableUint8ListView)
-  typed_data: 1.3.2
-  # Pin path so test + OBX agree
-  path: 1.9.0
-
-###############################################################################
-# Flutter assets
+# FLUTTER ASSETS
 ###############################################################################
 flutter:
   uses-material-design: true
   assets:
-    # Lua helpers
+    # Lua helpers bundled with frame_msg
     - packages/frame_msg/lua/battery.min.lua
     - packages/frame_msg/lua/data.min.lua
     - packages/frame_msg/lua/camera.min.lua
     - packages/frame_msg/lua/code.min.lua
     - packages/frame_msg/lua/plain_text.min.lua
-    # Frame Lua bootstrap
+    # Frame-side bootstrap
     - assets/frame_app.min.lua
-    # TFLite model & vocab
+    # TFLite text-embedding model & vocab
     - assets/models/mobilebert_embedding.tflite
     - assets/models/vocab.txt
+
+###############################################################################
+# OVERRIDES – force versions that Flutter 3.24 itself pins differently
+###############################################################################
+dependency_overrides:
+  # Flutter 3.24 pins `path` to 1.9.0 via flutter_test; keep everything aligned.
+  path: 1.9.0
+  # tflite_flutter 0.10.x expects `typed_data` ≤ 1.3; 1.4.0 removed
+  # `UnmodifiableUint8ListView`, so pin it back.
+  typed_data: 1.3.2
