--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,3 @@
-// Standard Flutter build.gradle template
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -18,11 +17,11 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
-apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+// The 'apply from' line that was here has been moved to the bottom.
 
 android {
-    namespace "com.example.frame_realtime_gemini_voicevision" // You can change this to your app's identifier
-    compileSdkVersion 34 // Updated to a modern SDK version
+    namespace "com.example.frame_realtime_gemini_voicevision"
+    compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -31,9 +30,9 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.frame_realtime_gemini_voicevision" // You can change this to your app's identifier
+        applicationId "com.example.frame_realtime_gemini_voicevision"
         minSdkVersion 21
-        targetSdkVersion 34 // Updated to a modern SDK version
+        targetSdkVersion 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -52,3 +51,8 @@ flutter {
 dependencies {
     // No extra dependencies needed here by default
 }
+
+// THIS IS THE CORRECTED PART:
+// By applying the Flutter Gradle script at the end, it ensures that 'flutterRoot'
+// and other properties are available when the script needs them.
+apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
