--- a/.github/workflows/build-demo-apk.yml
+++ b/.github/workflows/build-demo-apk.yml
@@ -1,63 +1,52 @@
-name: Build Frame Vision Gemini Demo APK
+name: Build Cognitive Assistant APK
 
-# Controls when the workflow will run
 on:
   push:
     branches:
-      - temp-stable-build # CHANGED: Now triggers on your current default branch
+      - refactor-v2  # This now watches our new branch
+      - main
   pull_request:
     branches:
-      - temp-stable-build # CHANGED: Now triggers for PRs against your branch
-  workflow_dispatch: # Allows you to trigger this workflow manually from the Actions tab
+      - main
+  workflow_dispatch:
 
 jobs:
   build_apk:
     name: Build Demo APK
-    runs-on: ubuntu-latest # Use the latest available Ubuntu runner
+    runs-on: ubuntu-latest
 
     steps:
-      # 1. Checks out your repository under $GITHUB_WORKSPACE, so your workflow can access it
       - name: Checkout repository code
         uses: actions/checkout@v4
 
-      # 2. Set up Java Development Kit (JDK) - Required for Android builds
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 3. Set up Flutter SDK
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
+          flutter-version: '3.24.0'
           channel: 'stable'
+          cache: true
 
-      # 4. Install Flutter project dependencies
       - name: Install Flutter dependencies
         run: flutter pub get
 
-      # 5. Ensure android/gradlew is executable (good practice)
-      - name: Ensure gradlew is executable
-        run: |
-          if [ -f "android/gradlew" ]; then
-            chmod +x android/gradlew
-          else
-            echo "android/gradlew not found, skipping chmod. Flutter build will attempt to proceed."
-          fi
+      - name: Run Build Runner
+        run: dart run build_runner build --delete-conflicting-outputs
 
-      # 6. NEW: Clean the project before building
       - name: Clean Flutter build cache
         run: flutter clean
 
-      # 7. Build the debug APK
       - name: Build Debug APK
         run: flutter build apk --debug
 
-      # 8. Upload the generated APK as an artifact
       - name: Upload Demo APK Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: frame-vision-gemini-debug.apk # Name of the artifact you'll download
-          path: build/app/outputs/flutter-apk/app-debug.apk # Standard path for Flutter debug APKs
-          if-no-files-found: error # Fail the workflow if the APK isn't found
+          name: cognitive-assistant-debug.apk
+          path: build/app/outputs/flutter-apk/app-debug.apk
+          if-no-files-found: error
